--- a/src/views/cafe-create.ejs
+++ b/src/views/cafe-create.ejs
@@ -9,7 +9,7 @@
   <h1>Tambah Kafe</h1>
   <a class="btn" href="/">Kembali</a>
   <hr>
-  <form action="/cafes/create">
+  <form action="/cafes/create" method="post">
     <div>
       <label for="name">Nama</label>
       <input type="text" name="name" id="name">
